[gd_scene load_steps=6 format=2]

[ext_resource path="res://drawings/title.svg" type="Texture" id=1]
[ext_resource path="res://drawings/newgame.svg" type="Texture" id=2]
[ext_resource path="res://drawings/options.svg" type="Texture" id=3]
[ext_resource path="res://drawings/quit.svg" type="Texture" id=4]
[ext_resource path="res://Menu.gd" type="Script" id=5]

[node name="TitleScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="."]
margin_left = 38.0001
margin_top = 70.3001
margin_right = 1201.0
margin_bottom = 521.3
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 38.95
margin_top = 226.05
margin_right = 838.95
margin_bottom = 384.05
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
margin_right = 800.0
margin_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 800, 50 )
flat = true

[node name="NewGameLabel" type="TextureRect" parent="VBoxContainer/NewGameButton"]
margin_right = 549.0
margin_bottom = 167.0
rect_scale = Vector2( 0.25, 0.25 )
focus_mode = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 800.0
margin_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 800, 50 )
flat = true

[node name="OptionsLabel" type="TextureRect" parent="VBoxContainer/OptionsButton"]
margin_right = 397.0
margin_bottom = 195.0
rect_scale = Vector2( 0.25, 0.25 )
focus_mode = 2
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 800.0
margin_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 800, 50 )
flat = true

[node name="QuitLabel" type="TextureRect" parent="VBoxContainer/QuitButton"]
margin_right = 223.0
margin_bottom = 169.0
rect_scale = Vector2( 0.25, 0.25 )
focus_mode = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
